tests/ui/type-alias-impl-trait/infinite-cycle-involving-weak.stderr
error: cannot resolve opaque type
  --> $DIR/infinite-cycle-involving-weak.rs:7:13
   |
LL | fn foo() -> T {
   |             ^

error: aborting due to 1 previous error

